refactor(atomix): shutdown all groups